FORCE LinuxLator name everywhere

--- a/termux-shared/src/main/res/values/strings.xml
+++ b/termux-shared/src/main/res/values/strings.xml
@@ -2,13 +2,13 @@
 
 <!DOCTYPE resources [
     <!ENTITY TERMUX_PACKAGE_NAME "com.termux">
-    <!ENTITY TERMUX_APP_NAME "Termux">
-    <!ENTITY TERMUX_API_APP_NAME "Termux:API">
-    <!ENTITY TERMUX_BOOT_APP_NAME "Termux:Boot">
-    <!ENTITY TERMUX_FLOAT_APP_NAME "Termux:Float">
-    <!ENTITY TERMUX_STYLING_APP_NAME "Termux:Styling">
-    <!ENTITY TERMUX_TASKER_APP_NAME "Termux:Tasker">
-    <!ENTITY TERMUX_WIDGET_APP_NAME "Termux:Widget">
+    <!ENTITY TERMUX_APP_NAME "LinuxLator">
+    <!ENTITY TERMUX_API_APP_NAME "LinuxLator:API">
+    <!ENTITY TERMUX_BOOT_APP_NAME "LinuxLator:Boot">
+    <!ENTITY TERMUX_FLOAT_APP_NAME "LinuxLator:Float">
+    <!ENTITY TERMUX_STYLING_APP_NAME "LinuxLator:Styling">
+    <!ENTITY TERMUX_TASKER_APP_NAME "LinuxLator:Tasker">
+    <!ENTITY TERMUX_WIDGET_APP_NAME "LinuxLator:Widget">
     <!ENTITY TERMUX_PREFIX_DIR_PATH "/data/data/com.termux/files/usr">
     ]>
 
@@ -46,7 +46,7 @@
 
 
 
-    <!-- TermuxPluginUtils -->
+    <!-- LinuxLatorPluginUtils -->
     <string name="error_allow_external_apps_ungranted">%1$s requires `allow-external-apps`
         property to be set to `true` in `%2$s` file.</string>
 
@@ -78,11 +78,11 @@
 
 
 
-    <!-- TermuxUtils -->
+    <!-- LinuxLatorUtils -->
     <string name="msg_report_issue">
         If you want to report this issue, then copy its text from the options menu (3-dots on top right) and post
         an issue on one of the following links.
-        \n\nIf you are posting a Termux app crash report, then please provide details on what you were doing that
+        \n\nIf you are posting a LinuxLator app crash report, then please provide details on what you were doing that
         caused the crash and how to reproduce it, if possible.
         \n\nIf you are posting an issue on GitHub, then post it in the repository at which the report belongs at.
         Issues opened or emails sent with **(partial) screenshots** instead of copied text or a file of this report
